# BackpropEngine

./: CMakeLists.txt  LICENSE  README.md
include/backprop/: constantRegistry.hpp  function.hpp  tensor.hpp
sandbox/: CMakeLists.txt  main.cpp
src/tensor/: CMakeLists.txt  constantRegistry.cpp  function.cpp  internal_tensor.hpp  tensor.cpp
tests/: CMakeLists.txt  function_tests.cpp  tensor_tests.cpp  test_helpers.hpp
